--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    position: relative;
 }
 
 body {
@@ -18,8 +19,8 @@ a {
 #menu {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: baseline;
     list-style-type: none;
     padding-bottom: 15px;
     background-color: darkkhaki;
@@ -31,8 +32,10 @@ a {
 
 #logo {
     font-size: 1.2rem;
-    padding: 10px;
+    padding: 15px 25px;
     background-color: cyan;
+    position: absolute;
+    left: 0;
 }
 
 #toggle {
@@ -47,11 +50,33 @@ a {
     width: 100%;
     text-align: center;
     font-size: 1.1rem;
-    padding: 25px 0px 5px 0px;
+    padding: 25px 20px 5px 20px;
     display: none;
     background-color: blueviolet;
 }
 
 .active .item {
     display: block;
+}
+
+/* navbar desktop view */
+@media all and (min-width: 960px) {
+    #menu {
+        align-items: flex-start;
+    }
+
+    #logo {
+        order: 1;
+    }
+
+    .item {
+        order: 2;
+        padding: 15px 25px 20px 45px;
+        width: auto;
+        display: block;
+    }
+
+    #toggle {
+        display: none;
+    }
 }
