--- a/style.css
+++ b/style.css
@@ -16,24 +16,21 @@ a {
 }
 
 /* navbar mobile view */
-#menu {
+#nav-menu {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
     align-items: baseline;
     list-style-type: none;
-    padding-bottom: 15px;
-    background-color: darkkhaki;
 }
 
-#menu li a {
+#nav-menu li a {
     display: block;
 }
 
 #logo {
     font-size: 1.2rem;
     padding: 15px 25px;
-    background-color: cyan;
     position: absolute;
     left: 0;
 }
@@ -42,7 +39,6 @@ a {
     order: 1;
     size: 1.2rem;
     padding: 10px;
-    background-color: burlywood;
 }
 
 .item {
@@ -52,7 +48,6 @@ a {
     font-size: 1.1rem;
     padding: 25px 20px 5px 20px;
     display: none;
-    background-color: blueviolet;
 }
 
 .active .item {
@@ -71,7 +66,7 @@ a {
 
     .item {
         order: 2;
-        padding: 15px 25px 20px 45px;
+        padding: 15px 25px 20px 35px;
         width: auto;
         display: block;
     }
@@ -80,3 +75,344 @@ a {
         display: none;
     }
 }
+
+/* navbar ends */
+
+.img {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.parallax-bg {
+    background-image: url("https://images.unsplash.com/photo-1518290943012-2c2bec0e54d2?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=750&q=80");
+    min-height: 100vh; 
+    background-attachment: fixed;
+  }
+
+.cover-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: 'Oleo Script', cursive;
+    font-weight: thin;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    letter-spacing: 0.04rem;
+    font-weight: bold;
+    padding: 55px 15px 10px 15px;
+    color: #213423;
+}
+
+#cover-buttons {
+    display: flex;
+}
+
+#cover-buttons first-child {
+    margin-right: 10px;
+}
+
+
+#cover button {
+    margin-top: 80px;
+    background-color: transparent;
+    font-size: 0.6rem;
+    font-weight: bold;
+    border: 1.2px solid #121212;
+    padding: 5px;
+}
+
+/* cover ends */
+
+/* details starts */
+#details {
+    /*background-color: #121212;*/
+    background-color: #f2f2f2;
+    padding: 80px 0px;
+}
+
+.detail {
+    width: 95%;
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    padding: 35px 10px;
+}
+
+.detail-img {
+    width: 85%;
+    height: 250px;
+    border-radius: 4px;
+}
+
+.img1 {
+    background-image: url("https://images.unsplash.com/photo-1577809497158-073b1f0f8187?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+}
+
+.img2 {
+    background-image: url("https://lh3.googleusercontent.com/proxy/KyisfR2SsXEIJ4VbxxhmMwVveM9IoGrEG6NFCZQg77HoPiCBVzXHLjpuboEKfU5Qv30Af1cmRWGpAHx3ZU4cDz3KFXcdwHL5Z6NMDQz0Ym668N68DRsthe17vEhem5hyT7wDLPinc8dL");
+}
+
+.img3 {
+    background-image: url("https://images.unsplash.com/photo-1551529834-525807d6b4f3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1016&q=80");
+}
+
+.detail-text {
+    width: 70%;
+    height: 130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-color: white;
+    padding: 20px;
+    border-radius: 4px;
+    color: #2d3d3c;
+    font-size: 0.75rem;
+    margin-left: -130px;
+}
+
+.detail-text h4 {
+    padding-bottom: 5px;
+}
+/* details section ends */
+
+/*menu section starts */
+#menu {
+    padding: 80px 0px;
+    background-color: #000;
+    color: #fff;
+}
+
+#menu h2 {
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 80px;
+    font-size: 2rem;
+}
+
+.menu-grid {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-image: url("");
+}
+
+.row {
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    padding: 0 10px;
+}
+
+.menu-item {
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    margin: 10px 6px;
+    padding: 8px 6px;
+    color: #000;
+}
+
+.menu-img {
+    width: 36vw;
+    height: 150px;
+}
+
+.imgm1 {
+    background-image: url("https://images.unsplash.com/photo-1563245372-f21724e3856d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1129&q=80");
+}
+
+.imgm2 {
+    background-image: url("https://images.unsplash.com/photo-1606728035253-49e8a23146de?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80");
+}
+
+.imgm3 {
+    background-image: url("https://images.unsplash.com/photo-1588644525273-f37b60d78512?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1050&q=80");
+}
+
+.imgm4 {
+    background-image: url("https://images.unsplash.com/photo-1508736793122-f516e3ba5569?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=633&q=80");
+}
+
+.imgm5 {
+    background-image: url("https://images.unsplash.com/photo-1501200040150-4d65c94e8f21?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80");
+}
+
+.imgm6 {
+    background-image: url("https://images.unsplash.com/photo-1445979323117-80453f573b71?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1053&q=80");
+}
+
+.menu-item-text {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    font-size: 0.75rem;
+}
+
+.item-desc {
+    display: flex;
+    justify-content: space-between;
+}
+
+.item-name {
+    font-weight: bold;
+}
+/* menu section ends */
+
+/* gallery section begins */
+#gallery {
+    background-color: #fff;
+    padding: 80px 10px;
+}
+
+#gallery h2 {
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 80px;
+    font-size: 2rem;
+}
+
+.gallery-img {
+    height: 250px;
+    margin: 5px;
+}
+
+.imgg1 {
+    background-image: url("https://images.unsplash.com/photo-1554679665-f5537f187268?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80");
+}
+
+.imgg2 {
+    background-image: url("https://images.unsplash.com/photo-1486485764572-92b96f21882a?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=967&q=80");
+} 
+
+.imgg3 {
+    background-image: url("https://images.unsplash.com/photo-1428515613728-6b4607e44363?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
+}
+/* gallery section ens */
+
+/* contact section begins */
+#contact {
+    padding: 50px 20px;
+    background-image: url("./images/corndark.jpg");
+    color: #fff;
+}
+
+#contact h1 {
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 30px;
+    font-size: 2rem;
+}
+
+form {
+   max-width: 600px;
+   text-align: center;
+   margin: 20px auto;
+}
+  
+  .box {
+     border:0;
+     outline:0;
+     padding: 1em;
+     display: block;
+     width: 100%;
+     margin-top: 1em;
+     font-family: 'Merriweather', sans-serif;
+     box-shadow: 1px 1px rgba(black, 0.1);
+     resize: none;
+  }
+  
+  #input-submit {
+     color: white; 
+     background: red;
+     cursor: pointer;
+    
+    
+  }
+
+  #input-submit:hover {
+    box-shadow: 1px 1px 1px rgba(#aaa, 0.6); 
+ }
+  
+  textarea {
+      height: 126px;
+  }
+
+
+.half {
+  float: left;
+  width: 48%;
+  margin-bottom: 1em;
+}
+
+.right { width: 50%; }
+
+.left {
+     margin-right: 2%; 
+}
+
+
+@media (max-width: 480px) {
+  .half {
+     width: 100%; 
+     float: none;
+     margin-bottom: 0; 
+  }
+}
+
+
+/* Clearfix */
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.cf:after {
+    clear: both;
+}
+/* contact section ends */
+
+/* footer starts */
+footer {
+    background-color: #000;
+    padding: 24px 32px;
+    color: white;
+  }
+  
+  footer .social > i {
+    padding-right: 5px;
+  }
+  
+  .white-line {
+    height: 1.2px;
+    background-color: white;
+  }
+  
+  #footer-links {
+    display: flex;
+    padding: 25px 0px;
+  }
+  
+  .footer-links-container {
+    margin-right: 20px;
+  }
+  
+  .footer-links-container > a {
+    display: block;
+    color: white;
+  }
+  
+  #footer-links:last-child {
+    margin-right: 0;
+  }
+  
+  #footer-contact {
+    padding: 25px 0px;
+  }
+
+/* footer ends */
