--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-size: 15px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.2rem;
 }
 
@@ -26,6 +26,11 @@ a {
 
 #nav-menu li a {
     display: block;
+    color: #213423;
+}
+
+#nav-menu .item a:hover {
+    color: #a3a393;
 }
 
 #logo {
@@ -75,7 +80,6 @@ a {
         display: none;
     }
 }
-
 /* navbar ends */
 
 /* cover starts */
@@ -83,6 +87,7 @@ a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: hidden;
 }
 
 .parallax-bg {
@@ -96,11 +101,12 @@ a {
 
 #cover-text {
     width: 60vw;
+    height: 45vh;;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    padding: 15px;
+    padding: 30px 20px;
 
     font-family: 'Roboto', sans-serif;
     font-weight: thin;
@@ -111,6 +117,13 @@ a {
     color: #213423;
 
     background-color: rgba(200, 200, 200, 0.6);
+    cursor: pointer;
+}
+
+#cover-text:hover {
+    width: 61vw;
+    height: 46vh;
+    background-color: rgba(200, 200, 200, 0.65);
 }
 
 #cover-name {
@@ -127,7 +140,7 @@ a {
     color: #213423;
     font-size: 0.65rem;
     font-weight: bold;
-    border: 1.2px solid #213423;
+    border: 1.4px solid #213423;
     padding: 5px;
 }
 
@@ -138,9 +151,32 @@ a {
 
 /* cover ends */
 
+/* website cover starts */
+@media all and (min-width: 400px) {
+    #cover-text {
+        width: 35vw;
+        padding: 30px 20px;
+        line-height: 1.8rem;
+        font-size: 1.15rem;
+        font-weight: 500;
+    }
+
+    #cover-text:hover {
+        width: 36vw;
+    }
+
+    #cover-buttons button {
+        font-size: 0.8rem;
+        border: 1.4px solid #213423;
+        padding: 5px;
+        font-weight: bold;
+    }
+}
+
+/* website cover ends */
+
 /* details starts */
 #details {
-    /*background-color: #121212;*/
     background-color: #f2f2f2;
     padding: 80px 0px;
 }
@@ -154,6 +190,7 @@ a {
     align-items: center;
     display: flex;
     padding: 35px 10px;
+    cursor: pointer;
 }
 
 .detail-img {
@@ -162,12 +199,16 @@ a {
     border-radius: 4px;
 }
 
+.detail-img:hover {
+    opacity: 0.7;
+}
+
 .img1 {
     background-image: url("https://images.unsplash.com/photo-1577809497158-073b1f0f8187?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
 }
 
 .img2 {
-    background-image: url("https://lh3.googleusercontent.com/proxy/KyisfR2SsXEIJ4VbxxhmMwVveM9IoGrEG6NFCZQg77HoPiCBVzXHLjpuboEKfU5Qv30Af1cmRWGpAHx3ZU4cDz3KFXcdwHL5Z6NMDQz0Ym668N68DRsthe17vEhem5hyT7wDLPinc8dL");
+    background-image: url("https://images.unsplash.com/photo-1487702232819-65ae859daf8a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
 }
 
 .img3 {
@@ -189,14 +230,45 @@ a {
     margin-left: -130px;
 }
 
+.detail-text {
+    box-shadow:
+        0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+        0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+        0 12.5px 10px rgba(0, 0, 0, 0.06),
+        0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+        0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+        0 100px 80px rgba(0, 0, 0, 0.12);
+}
+
 .detail-text h4 {
     padding-bottom: 5px;
 }
 /* details section ends */
 
-/*menu section starts */
+/* website details section starts */
+@media all and (min-width: 400px) {
+    .detail-img {
+        width: 65%;
+        height: 250px;
+    }
+
+    .detail-text {
+        width: 50%;
+        height: 160px;
+        font-size: 0.9rem;
+    }
+
+    .detail-text h4 {
+        padding-bottom: 10px;
+    }
+}
+
+/* website details section ends */
+
+/* menu section starts */
 #menu {
-    padding: 80px 0px;
+    padding: 80px 10px;
+    margin: 0 auto;
     background-color: #000;
     color: #fff;
 }
@@ -209,30 +281,32 @@ a {
 }
 
 .menu-grid {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-image: url("");
-}
-
-.row {
-    width: 95%;
-    display: flex;
-    justify-content: center;
-    padding: 0 10px;
-}
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 5px;
+    grid-row-gap: 10px;
+    }
+    
+    .menu-item1 { grid-area: 3 / 2 / 4 / 3; }
+    .menu-item2 { grid-area: 2 / 2 / 3 / 3; }
+    .menu-item3 { grid-area: 1 / 2 / 2 / 3; }
+    .menu-item4 { grid-area: 1 / 1 / 2 / 2; }
+    .menu-item5 { grid-area: 2 / 1 / 3 / 2; }
+    .menu-item6 { grid-area: 3 / 1 / 4 / 2; }
 
 .menu-item {
+    width: 37vw;
     background-color: #f2f2f2;
     border-radius: 10px;
     margin: 10px 6px;
     padding: 8px 6px;
     color: #000;
+    cursor: pointer;
 }
 
 .menu-img {
-    width: 36vw;
+    width: 34vw;
     height: 150px;
 }
 
@@ -277,10 +351,56 @@ a {
 }
 /* menu section ends */
 
-/* menu section desktop view */
-@media all and (min-width: 960px) {
+/* menu section tab view starts */
+@media all and (min-width: 649px) {
+    .menu-grid {
+        width: 80vw;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 5px;    
+        grid-row-gap: 30px;
+        margin: 0 auto;
+        padding: 0 10px;
+    }
+        
+        .menu-item1 { grid-area: 1 / 1 / 2 / 2; }
+        .menu-item2 { grid-area: 1 / 2 / 2 / 3; }
+        .menu-item3 { grid-area: 1 / 3 / 2 / 4; }
+        .menu-item4 { grid-area: 2 / 1 / 3 / 2; }
+        .menu-item5 { grid-area: 2 / 2 / 3 / 3; }
+        .menu-item6 { grid-area: 2 / 3 / 3 / 4; }
 
+        .menu-item {
+            width: 26vw;
+            height: 220px;
+            margin: 10px 0 0 10px;
+            padding: 8px 5px;
+        }
+
+        .menu-img {
+            width: 24vw;
+            height: 165px;
+        }
 }
+/* menu section tab view ends */
+
+
+/* menu section website view starts */
+@media all and (min-width: 950px) {
+    .menu-item {
+        width: 22vw;
+        height: 290px;
+    }
+
+    .menu-img {
+        width: 21vw;
+        height: 235px;
+    }
+}
+/* menu section website view ends */
+
+
 
 /* gallery section begins */
 #gallery {
@@ -311,7 +431,47 @@ a {
 .imgg3 {
     background-image: url("https://images.unsplash.com/photo-1428515613728-6b4607e44363?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
 }
-/* gallery section ens */
+
+.imgg4 {
+    display: none;
+}
+
+.imgg5 {
+    display: none;
+}
+
+.imgg6 {
+    display: none;
+}
+/* gallery section ends */
+
+/* gallery section tab starts */
+@media all and (min-width: 649px) {
+    .gallery-row {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .gallery-img {
+        min-width: 31vw;
+        height: 300px;
+        margin: 5px;
+    }
+
+    /* .imgg4 {
+        background-image: url("https://images.unsplash.com/photo-1481833761820-0509d3217039?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
+    }
+    
+    .imgg5 {
+        background-image: url("https://images.unsplash.com/photo-1488992783499-418eb1f62d08?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1153&q=80");
+    }
+    
+    .imgg6 {
+        background-image: url("https://images.unsplash.com/photo-1544148103-0773bf10d330?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
+    } */
+}
+/* gallery section tab ends */
 
 /* contact section begins */
 #contact {
@@ -432,6 +592,11 @@ footer {
   
   #footer-contact {
     padding: 25px 0px;
+  }
+
+  #rights {
+      padding: 20px 0;
+      font-size: 0.8rem;
   }
 
 /* footer ends */
